<?xml version="1.0" encoding="utf-8"?>
<com.readboy.wearlauncher.view.NegativeScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/negative_screen_bg"
    >
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:splitMotionEvents="false">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="44px"
                android:background="@drawable/bg_title"
                android:gravity="center"
                android:text="@string/negative_title"
                android:textColor="@android:color/white"
                android:textSize="26px" />

            <TextView
                android:id="@+id/ring"
                android:layout_width="match_parent"
                android:layout_height="@dimen/negative_list_item_height"
                android:background="@drawable/negative_screen_item_bg"
                android:drawableLeft="@drawable/negative_icon_ring"
                android:drawablePadding="@dimen/negative_list_item_icon_left"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/negative_list_item_icon_left"
                android:text="@string/negative_item_bell"
                android:textColor="@color/negative_title_color_selector"
                android:textSize="@dimen/negative_list_item_title_text_size"
                android:lineSpacingExtra="@dimen/negative_list_item_spacing"/>

            <TextView
                android:id="@+id/weather"
                android:layout_width="match_parent"
                android:layout_height="@dimen/negative_list_item_height"
                android:layout_marginTop="@dimen/negative_list_item_spacing"
                android:background="@drawable/negative_screen_item_bg"
                android:drawableLeft="@drawable/negative_icon_weather"
                android:drawablePadding="@dimen/negative_list_item_icon_left"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/negative_list_item_icon_left"
                android:text="@string/negative_item_weather"
                android:textColor="@color/negative_title_color_selector"
                android:textSize="@dimen/negative_list_item_title_text_size"
                android:lineSpacingExtra="@dimen/negative_list_item_spacing"/>

            <TextView
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="@dimen/negative_list_item_height"
                android:layout_marginTop="@dimen/negative_list_item_spacing"
                android:background="@drawable/negative_screen_item_bg"
                android:drawableLeft="@drawable/negative_icon_settings"
                android:drawablePadding="@dimen/negative_list_item_icon_left"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/negative_list_item_icon_left"
                android:text="@string/negative_item_setting"
                android:textColor="@color/negative_title_color_selector"
                android:textSize="@dimen/negative_list_item_title_text_size" />
        </LinearLayout>
    </ScrollView>

</com.readboy.wearlauncher.view.NegativeScreen>
