<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dialog_instructions_padding_bottom_1"
            android:paddingLeft="@dimen/dialog_instructions_padding_left_1"
            android:paddingRight="@dimen/dialog_instructions_padding_right_1"
            android:paddingTop="@dimen/dialog_instructions_padding_top_1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/instruction_title"
                android:textColor="@color/white"
                android:textSize="@dimen/dialog_instructions_text_size_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_instructions_margin_top"
                android:gravity="left"
                android:lineSpacingExtra="@dimen/dialog_instructions_line_space"
                android:text="@string/instruction_content"
                android:textColor="@color/white"
                android:textSize="@dimen/dialog_instructions_text_size_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_instructions_margin_top"
                android:gravity="left"
                android:lineSpacingExtra="@dimen/dialog_instructions_line_space"
                android:text="@string/instruction_li"
                android:textColor="@color/white"
                android:textSize="@dimen/dialog_instructions_text_size_2" />
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dialog_instructions_margin_bottom_2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_bid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_instruction_cancel" />

        <Button
            android:id="@+id/ok_bid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_instruction_agree" />
    </LinearLayout>


</LinearLayout>